--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="container">
       <nav>
         <div class="status-bar">
-          <img src="https://github.com/jejarrett1/frontendChallenge/blob/master/images/Locked%20Clock.png">
+          <img src="../frontendChallenge/images/Locked Clock.png">
         </div>
         <div class="arrow-left">
           <i class="fa fa-chevron-left fa-inverse fa-2x" aria-hidden="true"></i>
