--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   <body>
     <section class="container">
       <nav>
-        <div class="status-bar">
-          <img src="../frontendChallenge/images/Locked%Clock.png">
-        </div>
+          <img src="../images/statusbar.png">
         <div class="arrow-left">
           <i class="fa fa-chevron-left fa-inverse fa-2x" aria-hidden="true"></i>
         </div>
@@ -24,83 +22,83 @@
           <i class="far fa-map fa-2x" aria-hidden ="true"></i>
         </div>
       </nav>
-      <section class="restaurant-list">
-        <div class="busline">
-          <div class="content">
+      <section class="bus-list">
+        <ul class="busline">
+          <li class="content">
             <h1>124-N</h1>
             <h3>Navy Pier</h3>
             <h3>9:44 | 9:54 | 10:04 | 10:14 | 10:24</h3>
-          </div>
-          <div class="arrow">
+          </li>
+          <li class="arrow">
             <i class="far fa-clock fa-2x" aria-hidden="true"></i>
             <h1>3</h1>
-          </div>
-        </div>
-        <div class="busline">
-          <div class="content">
+          </li>
+        </ul>
+        <ul class="busline">
+          <li class="content">
             <h1>6x</h1>
             <h3>Jackson Park Express</h3>
             <h3>Rerouted</h3>
-          </div>
-          <div class="arrow">
+          </li>
+          <li class="arrow">
             <i class="far fa-clock fa-2x" aria-hidden="true"></i>
             <h1></h1>
-          </div>
-        </div>
-        <div class="busline">
-          <div class="content">
+          </li>
+        </ul>
+        <ul class="busline">
+          <li class="content">
             <h1>60-E</h1>
             <h3>Randolph/Harbor Dr</h3>
             <h3>10:00 | 10:20 | 10:40 | 11:00 | 11:20</h3>
-          </div>
-          <div class="arrow">
+          </li>
+          <li class="arrow">
             <i class="far fa-clock fa-2x" aria-hidden="true"></i>
             <h1>19</h1>
-          </div>
-        </div>
-        <div class="busline">
-          <div class="content">
+          </li>
+        </ul>
+        <ul class="busline">
+          <li class="content">
             <h1>124-S</h1>
             <h3>Navy Pier</h3>
             <h3>10:15 | 10:25 | 10:35 | 10:45 | 10:55</h3>
-          </div>
-          <div class="arrow">
+          </li>
+          <li class="arrow">
             <i class="far fa-clock fa-2x" aria-hidden="true"></i>
             <h1>35</h1>
-          </div>
-        </div>
-        <div class="busline">
-          <div class="content">
+          </li>
+        </ul>
+        <ul class="busline">
+          <li class="content">
             <h1>151-N</h1>
             <h3>Devon/Clark</h3>
             <h3>10:34 | 10:50 | 11:06 | 11:22 | 11:38</h3>
-          </div>
-          <div class="arrow">
+          </li>
+          <li class="arrow">
             <i class="far fa-clock fa-2x" aria-hidden="true"></i>
             <h1>53</h1>
-          </div>
-        </div>
-        <div class="busline outofservice">
-          <div class="content">
+          </li>
+        </ul>
+        <ul class="busline outofservice">
+          <li class="content">
             <h1>4</h1>
               <h3>Cottage Grove</h3>
               <h3>Resumes at 12:10am</h3>
-          </div>
-        </div>
-        <div class="busline outofservice">
-          <div class="content">
+          </li>
+        </ul>
+        <ul class="busline outofservice">
+          <li class="content">
             <h1>20</h1>
               <h3>Madison</h3>
               <h3>Resumes at 12:10am</h3>
-          </div>
-        </div>
-        <div class="busline outofservice">
-          <div class="content">
+          </li>
+        </ul>
+        <ul class="busline outofservice">
+          <li class="content">
             <h1>157</h1>
               <h3>Streeterville</h3>
               <h3>Resumes 6:00am</h3>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
     </section>
   </body>
