--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <section class="container">
       <nav>
-          <img src="../images/statusbar.png">
+          <img src="../frontendChallenge/images/statusbar.png">
         <div class="arrow-left">
           <i class="fa fa-chevron-left fa-inverse fa-2x" aria-hidden="true"></i>
         </div>
